@@ -163,174 +163,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 
-# -------------------------
-# --- macOS amd64 steps ---
-# -------------------------
-#
-  macos-amd64:
-    runs-on: macos-13
-    steps:
-
-    # --- Clone the latest commit ---
-    - name: Checkout
-      uses: actions/checkout@v3
-      with:
-        fetch-tags: true
-        submodules: recursive
-        fetch-depth: 0
-
-    # --- Config git and get the version from "git describe" ---
-    - name: Config Git
-      id: config_git
-      shell: bash
-      run: |
-        git config user.email "Ho-Ro@users.noreply.github.com"
-        git config user.name "Ho-Ro"
-        git fetch --tags --force || true
-        git submodule update --init --recursive
-        echo "git_describe=$(git describe)"
-        echo "git_describe=$(git describe)" >> $GITHUB_OUTPUT
-
-    - name: Install macOS intel Build Requirements
-      run: |
-        mkdir build
-        brew install qt@6 fftw binutils create-dmg || true
-
-    - name: macOS intel Build
-      # GitHub hosts macOS runners in GitHub's own macOS Cloud:
-      # 4-core CPU, 14 GB of RAM memory, 14 GB of SSD disk space
-      working-directory: ${{github.workspace}}/build
-      run: |
-        cp ../CHANGELOG changelog
-        cmake .. -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DCMAKE_PREFIX_PATH=$(brew --prefix qt@6)
-        make -j16
-        sudo make -j16 package
-        if test -d openhantek/OpenHantek.app; then
-          export PATH=$(brew --prefix qt@6)/bin:${PATH}
-          cd openhantek
-          macdeployqt OpenHantek.app -always-overwrite -verbose=1
-          python ../../utils/macdeployqtfix/macdeployqtfix.py \
-            --quiet OpenHantek.app/Contents/MacOS/OpenHantek $(brew --prefix qt@6)
-          create-dmg --volname OpenHantek --volicon ../../openhantek/res/images/OpenHantek.icns \
-            --window-pos 200 120 --window-size 800 400 --icon-size 100 --icon "OpenHantek.app" 200 190 \
-            --skip-jenkins --hide-extension "OpenHantek.app" --app-drop-link 600 185 \
-            --eula ../../LICENSE OpenHantek.dmg OpenHantek.app
-          cd ..
-        else
-          true
-        fi
-        if test -d openhantek/OpenHantek.app; then
-          cd openhantek
-          sudo tar -czf ../packages/openhantek_*_macos_*.tar.gz OpenHantek.app
-          if test -f OpenHantek.dmg; then
-            sudo mv OpenHantek.dmg ../packages/$(basename ../packages/openhantek_*_macos_*.tar.gz .tar.gz).dmg
-          fi
-          cd ..
-          ls -l packages
-        else
-          true
-        fi
-
-    - name: Upload macOS intel Artifacts
-      uses: actions/upload-artifact@v4
-      with:
-        name: openhantek_${{ steps.config_git.outputs.git_describe }}_macos_amd64
-        path: ${{github.workspace}}/build/packages/*
-
-    - name: Upload macOS intel Release Assets
-      if: startsWith(github.ref, 'refs/tags/')
-      uses: softprops/action-gh-release@v1
-      with:
-        prerelease: true
-        files: ./build/packages/*
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-
-# -------------------------
-# --- macOS arm64 steps ---
-# -------------------------
-#
-  macos-arm64:
-    runs-on: macos-14
-    steps:
-
-    # --- Clone the latest commit ---
-    - name: Checkout
-      uses: actions/checkout@v3
-      with:
-        fetch-tags: true
-        submodules: recursive
-        fetch-depth: 0
-
-    # --- Config git and get the version from "git describe" ---
-    - name: Config Git
-      id: config_git
-      shell: bash
-      run: |
-        git config user.email "Ho-Ro@users.noreply.github.com"
-        git config user.name "Ho-Ro"
-        git fetch --tags --force || true
-        git submodule update --init --recursive
-        echo "git_describe=$(git describe)"
-        echo "git_describe=$(git describe)" >> $GITHUB_OUTPUT
-
-    - name: Install macOS Build Requirements
-      run: |
-        mkdir build
-        brew install qt@6 fftw binutils create-dmg || true
-
-    - name: macOS arm64 Build
-      # GitHub hosts macOS runners in GitHub's own macOS Cloud:
-      # 3-core M1 CPU, 14 GB of RAM memory, 7 GB of SSD disk space
-      working-directory: ${{github.workspace}}/build
-      run: |
-        cp ../CHANGELOG changelog
-        cmake .. -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DCMAKE_PREFIX_PATH=$(brew --prefix qt@6)
-        make -j12
-        sudo make -j12 package
-        if test -d openhantek/OpenHantek.app; then
-          export PATH=$(brew --prefix qt@6)/bin:${PATH}
-          cd openhantek
-          macdeployqt OpenHantek.app -always-overwrite -verbose=1
-          python ../../utils/macdeployqtfix/macdeployqtfix.py \
-            --quiet OpenHantek.app/Contents/MacOS/OpenHantek $(brew --prefix qt@6)
-          create-dmg --volname OpenHantek --volicon ../../openhantek/res/images/OpenHantek.icns \
-            --window-pos 200 120 --window-size 800 400 --icon-size 100 --icon "OpenHantek.app" 200 190 \
-            --skip-jenkins --hide-extension "OpenHantek.app" --app-drop-link 600 185 \
-            --eula ../../LICENSE OpenHantek.dmg OpenHantek.app
-          cd ..
-        else
-          true
-        fi
-        if test -d openhantek/OpenHantek.app; then
-          cd openhantek
-          sudo tar -czf ../packages/openhantek_*_macos_*.tar.gz OpenHantek.app
-          if test -f OpenHantek.dmg; then
-            sudo mv OpenHantek.dmg ../packages/$(basename ../packages/openhantek_*_macos_*.tar.gz .tar.gz).dmg
-          fi
-          cd ..
-          ls -l packages
-        else
-          true
-        fi
-
-    - name: Upload macOS arm64 Artifacts
-      uses: actions/upload-artifact@v4
-      with:
-        name: openhantek_${{ steps.config_git.outputs.git_describe }}_macos_arm64
-        path: ${{github.workspace}}/build/packages/*
-
-    - name: Upload macOS arm64 Release Assets
-      if: startsWith(github.ref, 'refs/tags/')
-      uses: softprops/action-gh-release@v1
-      with:
-        prerelease: true
-        files: ./build/packages/*
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-
 # --------------------------
 # --- Windows MSVC steps ---
 # --------------------------
@@ -474,4 +306,176 @@ jobs:
 #         files: ./build/packages/*
 #       env:
 #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+
+############################################
+# The macOS build is currently not working #
+############################################
+
+# # -------------------------
+# # --- macOS amd64 steps ---
+# # -------------------------
+# #
+  # macos-amd64:
+  #   runs-on: macos-13
+  #   steps:
+  #
+  #   # --- Clone the latest commit ---
+  #   - name: Checkout
+  #     uses: actions/checkout@v3
+  #     with:
+  #       fetch-tags: true
+  #       submodules: recursive
+  #       fetch-depth: 0
+  #
+  #   # --- Config git and get the version from "git describe" ---
+  #   - name: Config Git
+  #     id: config_git
+  #     shell: bash
+  #     run: |
+  #       git config user.email "Ho-Ro@users.noreply.github.com"
+  #       git config user.name "Ho-Ro"
+  #       git fetch --tags --force || true
+  #       git submodule update --init --recursive
+  #       echo "git_describe=$(git describe)"
+  #       echo "git_describe=$(git describe)" >> $GITHUB_OUTPUT
+  #
+  #   - name: Install macOS intel Build Requirements
+  #     run: |
+  #       mkdir build
+  #       brew install qt@6 fftw binutils create-dmg || true
+  #
+  #   - name: macOS intel Build
+  #     # GitHub hosts macOS runners in GitHub's own macOS Cloud:
+  #     # 4-core CPU, 14 GB of RAM memory, 14 GB of SSD disk space
+  #     working-directory: ${{github.workspace}}/build
+  #     run: |
+  #       cp ../CHANGELOG changelog
+  #       cmake .. -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DCMAKE_PREFIX_PATH=$(brew --prefix qt@6)
+  #       make -j16
+  #       sudo make -j16 package
+  #       if test -d openhantek/OpenHantek.app; then
+  #         export PATH=$(brew --prefix qt@6)/bin:${PATH}
+  #         cd openhantek
+  #         macdeployqt OpenHantek.app -always-overwrite -verbose=1
+  #         python ../../utils/macdeployqtfix/macdeployqtfix.py \
+  #           --quiet OpenHantek.app/Contents/MacOS/OpenHantek $(brew --prefix qt@6)
+  #         create-dmg --volname OpenHantek --volicon ../../openhantek/res/images/OpenHantek.icns \
+  #           --window-pos 200 120 --window-size 800 400 --icon-size 100 --icon "OpenHantek.app" 200 190 \
+  #           --skip-jenkins --hide-extension "OpenHantek.app" --app-drop-link 600 185 \
+  #           --eula ../../LICENSE OpenHantek.dmg OpenHantek.app
+  #         cd ..
+  #       else
+  #         true
+  #       fi
+  #       if test -d openhantek/OpenHantek.app; then
+  #         cd openhantek
+  #         sudo tar -czf ../packages/openhantek_*_macos_*.tar.gz OpenHantek.app
+  #         if test -f OpenHantek.dmg; then
+  #           sudo mv OpenHantek.dmg ../packages/$(basename ../packages/openhantek_*_macos_*.tar.gz .tar.gz).dmg
+  #         fi
+  #         cd ..
+  #         ls -l packages
+  #       else
+  #         true
+  #       fi
+  #
+  #   - name: Upload macOS intel Artifacts
+  #     uses: actions/upload-artifact@v4
+  #     with:
+  #       name: openhantek_${{ steps.config_git.outputs.git_describe }}_macos_amd64
+  #       path: ${{github.workspace}}/build/packages/*
+  #
+  #   - name: Upload macOS intel Release Assets
+  #     if: startsWith(github.ref, 'refs/tags/')
+  #     uses: softprops/action-gh-release@v1
+  #     with:
+  #       prerelease: true
+  #       files: ./build/packages/*
+  #     env:
+  #       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+
+# # -------------------------
+# # --- macOS arm64 steps ---
+# # -------------------------
+# #
+  # macos-arm64:
+  #   runs-on: macos-14
+  #   steps:
+  #
+  #   # --- Clone the latest commit ---
+  #   - name: Checkout
+  #     uses: actions/checkout@v3
+  #     with:
+  #       fetch-tags: true
+  #       submodules: recursive
+  #       fetch-depth: 0
+  #
+  #   # --- Config git and get the version from "git describe" ---
+  #   - name: Config Git
+  #     id: config_git
+  #     shell: bash
+  #     run: |
+  #       git config user.email "Ho-Ro@users.noreply.github.com"
+  #       git config user.name "Ho-Ro"
+  #       git fetch --tags --force || true
+  #       git submodule update --init --recursive
+  #       echo "git_describe=$(git describe)"
+  #       echo "git_describe=$(git describe)" >> $GITHUB_OUTPUT
+  #
+  #   - name: Install macOS Build Requirements
+  #     run: |
+  #       mkdir build
+  #       brew install qt@6 fftw binutils create-dmg || true
+  #
+  #   - name: macOS arm64 Build
+  #     # GitHub hosts macOS runners in GitHub's own macOS Cloud:
+  #     # 3-core M1 CPU, 14 GB of RAM memory, 7 GB of SSD disk space
+  #     working-directory: ${{github.workspace}}/build
+  #     run: |
+  #       cp ../CHANGELOG changelog
+  #       cmake .. -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DCMAKE_PREFIX_PATH=$(brew --prefix qt@6)
+  #       make -j12
+  #       sudo make -j12 package
+  #       if test -d openhantek/OpenHantek.app; then
+  #         export PATH=$(brew --prefix qt@6)/bin:${PATH}
+  #         cd openhantek
+  #         macdeployqt OpenHantek.app -always-overwrite -verbose=1
+  #         python ../../utils/macdeployqtfix/macdeployqtfix.py \
+  #           --quiet OpenHantek.app/Contents/MacOS/OpenHantek $(brew --prefix qt@6)
+  #         create-dmg --volname OpenHantek --volicon ../../openhantek/res/images/OpenHantek.icns \
+  #           --window-pos 200 120 --window-size 800 400 --icon-size 100 --icon "OpenHantek.app" 200 190 \
+  #           --skip-jenkins --hide-extension "OpenHantek.app" --app-drop-link 600 185 \
+  #           --eula ../../LICENSE OpenHantek.dmg OpenHantek.app
+  #         cd ..
+  #       else
+  #         true
+  #       fi
+  #       if test -d openhantek/OpenHantek.app; then
+  #         cd openhantek
+  #         sudo tar -czf ../packages/openhantek_*_macos_*.tar.gz OpenHantek.app
+  #         if test -f OpenHantek.dmg; then
+  #           sudo mv OpenHantek.dmg ../packages/$(basename ../packages/openhantek_*_macos_*.tar.gz .tar.gz).dmg
+  #         fi
+  #         cd ..
+  #         ls -l packages
+  #       else
+  #         true
+  #       fi
+  #
+  #   - name: Upload macOS arm64 Artifacts
+  #     uses: actions/upload-artifact@v4
+  #     with:
+  #       name: openhantek_${{ steps.config_git.outputs.git_describe }}_macos_arm64
+  #       path: ${{github.workspace}}/build/packages/*
+  #
+  #   - name: Upload macOS arm64 Release Assets
+  #     if: startsWith(github.ref, 'refs/tags/')
+  #     uses: softprops/action-gh-release@v1
+  #     with:
+  #       prerelease: true
+  #       files: ./build/packages/*
+  #     env:
+  #       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
